# flask-gem

./: README.md  pyproject.toml
.github/workflows/: codeql.yml  osv-scanner.yml  poetry-pypi.yml
src/: __init__.py  cli.py  destroyer.py  generator.py  helper.py
src/sample/: controller.txt  helper.txt
src/template/: __init__.py  app.py  database.py  requirements.txt  routes.py
src/template/static/css/: style.css
src/template/templates/: base.html  index.html
tests/: test_destroyer.py  test_generator.py
